--- a/lab4/buzzButtons.html
+++ b/lab4/buzzButtons.html
@@ -23,7 +23,7 @@
       
       name = prompt("Enter your full name", ES);
       email = prompt("Enter your email", ES);
-      numOfButtons = prompt("Enter the desired number of buttons", ES):
+      numOfButtons = prompt("Enter the desired number of buttons", ES);
       numOfButtons = parseInt(numOfButtons);
       
       document.write("Full Name: " + name + BR);
